# ZeroTrace

./: .gitignore  README.md  TODO.md  application.py  device_detector.py  dialogs.py  index.html  main_window.py  package-lock.json  pdf_generator.py  requirements.txt
certificate_signer/: CMakeLists.txt  certificate_signer.cpp
certificate_utils/: pdf_generator.py  verifier.py
desktop_app/: ZeroTrace.spec  admin_privileges.py  application.py  certificate_manager.py  dialogs.py  imports.py  logger.py  main.py  main_window.py  pdf_generator.py  signer.py  supabase_client.py  supabase_utils.py  wipe_engine.py  wipe_thread.py
desktop_app/certificate_utils/: signer.py  verifier.py
desktop_app/keys/: private_key.pem  public_key.pem
src/: App.jsx
src/components/: ForgotPassword.jsx  QrGenerator.jsx  RegisterPage.jsx  UserDashboard.jsx
supabase_config/: policies.sql  schema.sql  storage.sql
web_portal/backend/: app.py  config.py  package.json  server.js  supabase_client.py
web_portal/backend/lib/: supabaseClient.js
web_portal/backend/routes/: __init__.py  auth.js  auth.py  certificates.js  certificates.py  verification.js  verification.py
web_portal/frontend/: index.html  package-lock.json  package.json  vite.config.js
web_portal/frontend/src/: App.jsx
web_portal/frontend/src/Lib/: supabase.js
web_portal/frontend/src/components/: PublicVerificationPortal.jsx  UserDashboard.jsx
web_portal/src/components/: CertificateList.jsx  LoginPage.jsx  QrScanner.jsx
